objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Persona__c</fullName>
        <description>#GR-0766</description>
        <label>Persona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C-Suite - OG - Above Property</fullName>
                </value>
                <value>
                    <fullName>C-Suite Chain/HMC - Above Property</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Brand - Above  Property</fullName>
                </value>
                <value>
                    <fullName>Regional Sales - Above Property</fullName>
                </value>
                <value>
                    <fullName>Revenue - Property</fullName>
                </value>
                <value>
                    <fullName>Sales - Property</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>General Management - Property</fullName>
                </value>
                <value>
                    <fullName>Sales - Property, Regional Sales – Above Property</fullName>
                </value>
                <value>
                    <fullName>Sales - Property, Marketing and Brand – Above Property</fullName>
                </value>
                <value>
                    <fullName>Revenue – Property, General Management – Property</fullName>
                </value>
                <value>
                    <fullName>Marketing - All</fullName>
                    <isActive>false</isActive>
                    <label>Marketing - All</label>
                </value>
                <value>
                    <fullName>Marketing - Property</fullName>
                    <isActive>false</isActive>
                    <label>Marketing - Property</label>
                </value>
                <value>
                    <fullName>Marketing and Sales - Property</fullName>
                    <isActive>false</isActive>
                    <label>Marketing and Sales - Property</label>
                </value>
                <value>
                    <fullName>Operations - All</fullName>
                    <isActive>false</isActive>
                    <label>Operations - All</label>
                </value>
                <value>
                    <fullName>Sales - All</fullName>
                    <isActive>false</isActive>
                    <label>Sales - All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planner__c</fullName>
        <label>Planner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presenter__c</fullName>
        <label>Presenter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aaron Singh</fullName>
                </value>
                <value>
                    <fullName>Adam Laufman</fullName>
                </value>
                <value>
                    <fullName>Afeef Khalil</fullName>
                </value>
                <value>
                    <fullName>Alex Rolfe</fullName>
                </value>
                <value>
                    <fullName>Alex Walker</fullName>
                </value>
                <value>
                    <fullName>Alexander Walker</fullName>
                </value>
                <value>
                    <fullName>Allie Pandelidis</fullName>
                </value>
                <value>
                    <fullName>Allison Smith</fullName>
                </value>
                <value>
                    <fullName>Allison Zaidi</fullName>
                </value>
                <value>
                    <fullName>Alysa Robbins</fullName>
                </value>
                <value>
                    <fullName>Alyson Campbell</fullName>
                </value>
                <value>
                    <fullName>Amandeep Singh Julka</fullName>
                </value>
                <value>
                    <fullName>Andrew Rouhafzai</fullName>
                </value>
                <value>
                    <fullName>Andy Komandur</fullName>
                </value>
                <value>
                    <fullName>Andy Rouhafzai</fullName>
                </value>
                <value>
                    <fullName>Anil Punyapu</fullName>
                </value>
                <value>
                    <fullName>Anna Hill</fullName>
                </value>
                <value>
                    <fullName>Anthony Casper</fullName>
                </value>
                <value>
                    <fullName>Ashley Carleton</fullName>
                </value>
                <value>
                    <fullName>Austen Steele</fullName>
                </value>
                <value>
                    <fullName>Austin Alam</fullName>
                </value>
                <value>
                    <fullName>Barry Womack</fullName>
                </value>
                <value>
                    <fullName>Bart Borrelli</fullName>
                </value>
                <value>
                    <fullName>Bart Hart</fullName>
                </value>
                <value>
                    <fullName>Ben Diamond</fullName>
                </value>
                <value>
                    <fullName>Bharet Malhotra</fullName>
                </value>
                <value>
                    <fullName>Billy McGee</fullName>
                </value>
                <value>
                    <fullName>Billy McKinney</fullName>
                </value>
                <value>
                    <fullName>Bob Shekhar</fullName>
                </value>
                <value>
                    <fullName>Brendan Markham</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>Navigate/SMM</fullName>
                </value>
                <value>
                    <fullName>Crowd Compass</fullName>
                </value>
                <value>
                    <fullName>TicketMob</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Analytics &amp; RFP Performance</fullName>
                </value>
                <value>
                    <fullName>Analytics &amp; RFP Performance, Kapow, Software and Integrations, Social Tables Sales and Catering CRM</fullName>
                </value>
                <value>
                    <fullName>Business Transient</fullName>
                </value>
                <value>
                    <fullName>Cross-Cloud</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass Onsite Solutions</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Event All</fullName>
                </value>
                <value>
                    <fullName>Event CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>Event Onsite Solutions</fullName>
                </value>
                <value>
                    <fullName>HC Core, Wedding Spot</fullName>
                </value>
                <value>
                    <fullName>HC Core Products - Bundles &amp; Promo Hub</fullName>
                </value>
                <value>
                    <fullName>HC Core Products – Diamonds</fullName>
                </value>
                <value>
                    <fullName>HC Core Products – Events</fullName>
                </value>
                <value>
                    <fullName>HC Core Products - Lanyon Group</fullName>
                </value>
                <value>
                    <fullName>HC Core Products – Others</fullName>
                </value>
                <value>
                    <fullName>HC Core Products - Suggested, Diamond Plus, Comp Market</fullName>
                </value>
                <value>
                    <fullName>Hospitality Cloud All</fullName>
                </value>
                <value>
                    <fullName>Kapow</fullName>
                </value>
                <value>
                    <fullName>Lanyon Events (Conference)</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings</fullName>
                </value>
                <value>
                    <fullName>Lanyon Mobile</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel</fullName>
                </value>
                <value>
                    <fullName>Onsite Solutions</fullName>
                </value>
                <value>
                    <fullName>Passkey</fullName>
                </value>
                <value>
                    <fullName>Passkey, Social Tables Event Diagramming</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>Software &amp; Integrations</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Wedding Spot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reputation Management/ Brand Awareness</fullName>
                </value>
                <value>
                    <fullName>Demand Gen</fullName>
                </value>
                <value>
                    <fullName>Sales Enablement</fullName>
                </value>
                <value>
                    <fullName>Market Intelligence</fullName>
                </value>
                <value>
                    <fullName>Adoption</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3rd party Agencies</fullName>
                </value>
                <value>
                    <fullName>Account Activation Welcome Email</fullName>
                </value>
                <value>
                    <fullName>Amazon: Event</fullName>
                </value>
                <value>
                    <fullName>Amazon: Inquisium</fullName>
                </value>
                <value>
                    <fullName>Assessment Survey</fullName>
                </value>
                <value>
                    <fullName>Association Meeting Summit</fullName>
                </value>
                <value>
                    <fullName>Awareness Campaign</fullName>
                </value>
                <value>
                    <fullName>BizDev: Farming Leads</fullName>
                </value>
                <value>
                    <fullName>BizDev: General</fullName>
                </value>
                <value>
                    <fullName>BizDev: Inbound Link</fullName>
                </value>
                <value>
                    <fullName>BizDev: IR</fullName>
                </value>
                <value>
                    <fullName>BizDev: Partnership</fullName>
                </value>
                <value>
                    <fullName>BizDev: Referral</fullName>
                </value>
                <value>
                    <fullName>BizDev: Trade of Service</fullName>
                </value>
                <value>
                    <fullName>Blog Post Links</fullName>
                </value>
                <value>
                    <fullName>Calendar Signups</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Client Marketing: Advocacy Program</fullName>
                </value>
                <value>
                    <fullName>Client Marketing: General</fullName>
                </value>
                <value>
                    <fullName>Client Marketing: Get Certified</fullName>
                </value>
                <value>
                    <fullName>Client Onboarding</fullName>
                </value>
                <value>
                    <fullName>Cold Calling</fullName>
                </value>
                <value>
                    <fullName>College Recruiting</fullName>
                </value>
                <value>
                    <fullName>Competitor Calling</fullName>
                </value>
                <value>
                    <fullName>Competitor Emailing</fullName>
                </value>
                <value>
                    <fullName>Content Marketing</fullName>
                </value>
                <value>
                    <fullName>Corporate Meetings Summit</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass Branding</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch 1:1</fullName>
                </value>
                <value>
                    <fullName>CrowdTorch Branding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>DACH</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Europe DACH</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>India, Middle East, Africa</fullName>
                </value>
                <value>
                    <fullName>India, Middle East, Africa, Singapore, Australia</fullName>
                </value>
                <value>
                    <fullName>India Singapore Australia</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Middle East Africa</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>North America Europe Singapore Australia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered__c</fullName>
        <label>Registered No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Room_Rental__c</fullName>
        <label>Room Rental/ Misc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seminar_Card__c</fullName>
        <label>Seminar Card</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INDIA</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seminar_Partner_Type__c</fullName>
        <label>Seminar Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Steakhouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seminar_Partners__c</fullName>
        <label>Seminar Partners</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CRAVE</fullName>
                </value>
                <value>
                    <fullName>Fogo De Chao</fullName>
                </value>
                <value>
                    <fullName>Maggianos</fullName>
                </value>
                <value>
                    <fullName>McCormicks &amp; Schmicks</fullName>
                </value>
                <value>
                    <fullName>Mortons The Steakhouse</fullName>
                </value>
                <value>
                    <fullName>Ruths Chris</fullName>
                </value>
                <value>
                    <fullName>The Capital Grille</fullName>
                </value>
                <value>
                    <fullName>The Palm</fullName>
                </value>
                <value>
                    <fullName>Wildfire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Seminar_Presenter__c</fullName>
        <label>Seminar Presenter</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seminar_Type__c</fullName>
        <label>Seminar/Tradeshow Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Reception</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Meeting Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping__c</fullName>
        <label>Folders Shipment Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ABPCO</fullName>
                </value>
                <value>
                    <fullName>Ace of Mice</fullName>
                </value>
                <value>
                    <fullName>ACTE</fullName>
                </value>
                <value>
                    <fullName>AdRoll</fullName>
                </value>
                <value>
                    <fullName>Advocacy_Hub</fullName>
                </value>
                <value>
                    <fullName>AEO ltd. </fullName>
                </value>
                <value>
                    <fullName>AHGZ</fullName>
                </value>
                <value>
                    <fullName>AHLA</fullName>
                </value>
                <value>
                    <fullName>Aimbridge Hospitality</fullName>
                </value>
                <value>
                    <fullName>All About Events Jenny Inc</fullName>
                </value>
                <value>
                    <fullName>AMA</fullName>
                </value>
                <value>
                    <fullName>AMA - DC Chapter</fullName>
                </value>
                <value>
                    <fullName>AMA - Houston Chapter</fullName>
                </value>
                <value>
                    <fullName>AMA HQ</fullName>
                </value>
                <value>
                    <fullName>AMA - Triangle Chapter</fullName>
                </value>
                <value>
                    <fullName>AMResorts</fullName>
                </value>
                <value>
                    <fullName>AppExchange</fullName>
                </value>
                <value>
                    <fullName>Argyle Group</fullName>
                </value>
                <value>
                    <fullName>Association Forum</fullName>
                </value>
                <value>
                    <fullName>Association of Collegiate Conference and Events Directors-International</fullName>
                </value>
                <value>
                    <fullName>Atrium Hospitality</fullName>
                </value>
                <value>
                    <fullName>Australia Association of Convention Bureaux</fullName>
                </value>
                <value>
                    <fullName>Australian Council for International Development</fullName>
                </value>
                <value>
                    <fullName>Australian Event Awards &amp; Symposium Pty Ltd.</fullName>
                </value>
                <value>
                    <fullName>Australian Society Of Association Executives</fullName>
                </value>
                <value>
                    <fullName>B2B Marketing</fullName>
                </value>
                <value>
                    <fullName>Big_Willow</fullName>
                </value>
                <value>
                    <fullName>Big Hospitality</fullName>
                </value>
                <value>
                    <fullName>Bing</fullName>
                </value>
                <value>
                    <fullName>BizBash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>8:30-AM</fullName>
                </value>
                <value>
                    <fullName>10:00-AM</fullName>
                </value>
                <value>
                    <fullName>10:30-AM</fullName>
                </value>
                <value>
                    <fullName>11:00-AM</fullName>
                </value>
                <value>
                    <fullName>11:30-AM</fullName>
                </value>
                <value>
                    <fullName>12:00-PM</fullName>
                </value>
                <value>
                    <fullName>1:00-PM</fullName>
                </value>
                <value>
                    <fullName>1:30-PM</fullName>
                </value>
                <value>
                    <fullName>2:00-PM</fullName>
                </value>
                <value>
                    <fullName>2:30-PM</fullName>
                </value>
                <value>
                    <fullName>3:00-PM</fullName>
                </value>
                <value>
                    <fullName>3:30-PM</fullName>
                </value>
                <value>
                    <fullName>4:00-PM</fullName>
                </value>
                <value>
                    <fullName>4:30-PM</fullName>
                </value>
                <value>
                    <fullName>5:00-PM</fullName>
                </value>
                <value>
                    <fullName>5:30-PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ADC</fullName>
                </value>
                <value>
                    <fullName>BizDev</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Confirmation Email</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass Social Media</fullName>
                </value>
                <value>
                    <fullName>CSN Seminar List Scrub</fullName>
                </value>
                <value>
                    <fullName>Cvent Social Media</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event Reminder Email</fullName>
                </value>
                <value>
                    <fullName>Internal Marketing</fullName>
                </value>
                <value>
                    <fullName>INV</fullName>
                </value>
                <value>
                    <fullName>INV REM</fullName>
                </value>
                <value>
                    <fullName>INV REM 2</fullName>
                </value>
                <value>
                    <fullName>INV REM 3</fullName>
                </value>
                <value>
                    <fullName>My Reg Page</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>On Page Social Share</fullName>
                </value>
                <value>
                    <fullName>On Page Social Share: Content</fullName>
                </value>
                <value>
                    <fullName>On Page Social Share: Landing Page</fullName>
                </value>
                <value>
                    <fullName>On Page Social Share: TY Email</fullName>
                </value>
                <value>
                    <fullName>On Page Social Share: TY Page</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Referral Email</fullName>
                </value>
                <value>
                    <fullName>Regret Email</fullName>
                </value>
                <value>
                    <fullName>Retargeting</fullName>
                </value>
                <value>
                    <fullName>Session</fullName>
                </value>
                <value>
                    <fullName>Sub-Camp</fullName>
                </value>
                <value>
                    <fullName>TY Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEMP_CMPGN__c</fullName>
        <label>TEMP-CMPGN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tactic__c</fullName>
        <label>Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>123Signup</fullName>
                </value>
                <value>
                    <fullName>A2Z</fullName>
                </value>
                <value>
                    <fullName>Abcsignup</fullName>
                </value>
                <value>
                    <fullName>ABPCO</fullName>
                </value>
                <value>
                    <fullName>ABPCO Members</fullName>
                </value>
                <value>
                    <fullName>Acceptiva</fullName>
                </value>
                <value>
                    <fullName>Acceptive</fullName>
                </value>
                <value>
                    <fullName>Account Activation Welcome Email</fullName>
                </value>
                <value>
                    <fullName>AccuReg</fullName>
                </value>
                <value>
                    <fullName>ACTE Germany</fullName>
                </value>
                <value>
                    <fullName>ACTE Members</fullName>
                </value>
                <value>
                    <fullName>Acteva</fullName>
                </value>
                <value>
                    <fullName>Active.com</fullName>
                </value>
                <value>
                    <fullName>Active Network</fullName>
                </value>
                <value>
                    <fullName>ADC Invitees</fullName>
                </value>
                <value>
                    <fullName>Advanced Solutions International</fullName>
                </value>
                <value>
                    <fullName>Advanced Tradeshow Technology</fullName>
                </value>
                <value>
                    <fullName>Advocate Share: LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Advocate Share: Twitter</fullName>
                </value>
                <value>
                    <fullName>AIBTM</fullName>
                </value>
                <value>
                    <fullName>ALL: Illegitimate- Ghost Chat</fullName>
                </value>
                <value>
                    <fullName>ALL: Illegitimate- Joker</fullName>
                </value>
                <value>
                    <fullName>Allegiance</fullName>
                </value>
                <value>
                    <fullName>Alliance Tech</fullName>
                </value>
                <value>
                    <fullName>Aloompa</fullName>
                </value>
                <value>
                    <fullName>Aloompa Venues_Inhouse</fullName>
                </value>
                <value>
                    <fullName>AMCI Members</fullName>
                </value>
                <value>
                    <fullName>AM email</fullName>
                </value>
                <value>
                    <fullName>Amiando</fullName>
                </value>
                <value>
                    <fullName>Amplify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>